--- a/app/www/data-preview-and-download.css
+++ b/app/www/data-preview-and-download.css
@@ -226,8 +226,6 @@
   position: sticky; top: 0;
 }
 
-
-
 .shiny-notification {
   background-color: rgba(30,82,136,0.8) !important; 
   border-radius: var(--bs-border-radius) !important;
@@ -236,9 +234,10 @@
   font-size: 12pt !important;
   font-style: italic !important; 
   font-weight: normal !important;
-  left: calc(50% - 150px) !important;
   position: fixed !important; 
-  top: calc(50%) !important; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .table-caption {
@@ -263,7 +262,12 @@
 }
 
 .table-title {
-  color: #343a40; font-weight: bold; margin-bottom: 0; margin-top: 0;
+  color: red;
+  font-size: "1rem";
+  padding-left: "0px";
+  text-transform: uppercase; 
+  /* margin-bottom: 0; 
+  margin-top: 0; */
 }
 
 .year:hover {
@@ -301,17 +305,20 @@
   text-shadow: none !important;
 }
 
-/* id */
-
-#datepickerModal {
-  color: blue !important;
-  font-size: 1rem;
-  text-align: left;
-  display: flex;
-  justify-content: center;
+.modal-dialog.modal-sm {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* id */
+
+#datepickerModal {
+  color: #989898 !important;
+  font-size: 1rem;
+  text-align: left;
+}
 
 #downloadTSV {
   background-color: transparent; border-color: #001C48; color: #001C48; margin-bottom: 4px; margin-left: 4px; margin-top: 4px;
