--- a/app/www/data-preview-and-download.css
+++ b/app/www/data-preview-and-download.css
@@ -1,19 +1,5 @@
 /* class */
 
-[data-title]:after {
-    background-color: rgba(30,82,136,0.8) !important;
-    border-radius: var(--bs-border-radius) !important;
-    color: #FFFFFF !important;
-    content: attr(data-title);
-    font-family: "Open Sans", verdana, arial, sans-serif !important;
-    font-weight: normal !important;
-}
-
-[data-title]:before {
-    border-left-color: rgba(30,82,136,0.8) !important;
-    content: attr(data-title);
-}
-
 /* https://stackoverflow.com/questions/77114751/is-it-possible-to-modify-the-arrow-that-collapses-the-sidebar */
 .bslib-sidebar-layout > .collapse-toggle > .collapse-icon {
   fill: #989898 !important;
@@ -58,9 +44,22 @@
   padding-top: 0px;
 }
 
+.card-header-title {
+  color: #202020;
+  font-size: 1rem;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
 .card-footer {
   background-color: rgb(255, 255, 255);
   padding: 0px;
+}
+
+.card-footer-text {
+  color: #202020; 
+  font-style: normal;
+  margin-top: 1.0rem;
 }
 
 .century.active.disabled.focused {
@@ -129,6 +128,11 @@
   text-shadow: none !important;
 }
 
+.download-button-help-text {
+  color: #989898; 
+  font-style: italic;
+  padding-top: 1.5rem;
+}
 
 .form-control:focus {
   border: 1px solid #CCCCCC !important;
@@ -241,16 +245,6 @@
   border-radius: 0px;
 }
 
-.shiny-html-output {
-  max-height: 381px; 
-  min-height: auto; 
-  overflow: auto;
-}
-
-.shiny-html-output thead th {
-  position: sticky; top: 0;
-}
-
 .shiny-notification {
   background-color: rgba(30,82,136,0.8) !important; 
   border-radius: var(--bs-border-radius) !important;
@@ -265,21 +259,13 @@
   transform: translate(-50%, -50%);
 }
 
-.table-caption {
-  color: #989898; 
-  font-style: italic;
-  padding-top: 1.5rem;
+.sidebar-page-text {
+  color: #202020;
 }
 
 .table-condensed {
   background-color: #FFFFFF; 
   color: var(--bs-body-color);
-}
-
-.table-footer-help-text {
-  color: #202020; 
-  font-style: normal;
-  margin-top: 1.0rem;
 }
 
 .table-help-text {
@@ -289,13 +275,6 @@
   font-weight: normal;
   margin-bottom: 0.0rem;
   margin-top: 1.75rem;
-}
-
-.table-title {
-  color: #202020;
-  font-size: 1rem;
-  font-weight: normal;
-  text-transform: uppercase;
 }
 
 .year:hover {
@@ -331,6 +310,20 @@
   border-color: none !important;
   color: var(--bs-body-color) !important;
   text-shadow: none !important;
+}
+
+[data-title]:after {
+    background-color: red !important;
+    border-radius: var(--bs-border-radius) !important;
+    color: #FFFFFF !important;
+    content: attr(data-title);
+    font-family: "Open Sans", verdana, arial, sans-serif !important;
+    font-weight: normal !important;
+}
+
+[data-title]:before {
+    border-left-color: red !important;
+    content: attr(data-title);
 }
 
 /* id */
