--- a/app/www/data-preview-and-download.css
+++ b/app/www/data-preview-and-download.css
@@ -256,6 +256,7 @@
 
 .sorting_1 {
   background-color: rgba(171, 5, 32, 0.1) !important;
+  border-color: #191919 !important;
 }
 
 /* .table {
@@ -307,7 +308,7 @@
 }
 
 .table-footer {
-  color: #191919; 
+  color: red; 
   font-size: 0.95rem;
   font-style: normal;
   margin-top: 0.25rem;
