--- a/app/www/data-preview-and-download.css
+++ b/app/www/data-preview-and-download.css
@@ -1,5 +1,7 @@
 /* class */
 
+/* https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css */
+
 /* https://stackoverflow.com/questions/77114751/is-it-possible-to-modify-the-arrow-that-collapses-the-sidebar */
 .bslib-sidebar-layout > .collapse-toggle > .collapse-icon {
   fill: #989898 !important;
@@ -256,7 +258,10 @@
 
 .sorting_1 {
   background-color: rgba(171, 5, 32, 0.1) !important;
-  border-color: #191919 !important;
+  outline-color: rgba(63, 0, 9, 0.2);
+  outline-offset: -1px;
+  outline-style: solid;
+  outline-width: 1px;
 }
 
 /* .table {
@@ -307,8 +312,15 @@
   color: var(--bs-body-color);
 }
 
+.table.dataTable thead > tr > th:hover {
+  outline-color: rgba(63, 0, 9, 0.2);
+  outline-offset: -2px;
+  outline-style: solid;
+  outline-width: 2px;
+}
+
 .table-footer {
-  color: red; 
+  color: #191919; 
   font-size: 0.95rem;
   font-style: normal;
   margin-top: 0.25rem;
