--- a/app/www/data-preview-and-download.css
+++ b/app/www/data-preview-and-download.css
@@ -257,7 +257,7 @@
 }
 
 .sorting_1 {
-  background-color: rgba(171, 5, 32, 0.1) !important;
+  background-color: rgba(239, 226, 226, 1.0) !important;
   outline-color: rgba(63, 0, 9, 0.2);
   outline-offset: -1px;
   outline-style: solid;
@@ -285,13 +285,12 @@
   border-right-color: #dee2e6 !important;
   border-right-style: solid !important;
   border-right-width: 1px !important;
-}
-
-/* .table > tbody > tr > td:nth-of-type(1) {
-  border-left-width: 0px !important;
-  color: red;
-  font-size: larger;
 } */
+
+.table > tbody > tr > td:nth-of-type(1) {
+  border-right-color: rgb(180, 180, 180, 1.0) !important;
+  border-right-width: 1.25px !important;
+}
 
 /* .table > thead > tr > th {
   border-bottom-width: 1px !important;
@@ -319,6 +318,15 @@
   outline-width: 2px;
 }
 
+.table.dataTable thead > tr > th {
+  border-bottom-color: rgb(180, 180, 180, 1.0) !important;
+  border-bottom-width: 1px !important;
+}
+
+.table.dataTable thead > tr > th:nth-of-type(1) {
+  box-shadow: 1px 0px 0px 0px rgb(180, 180, 180, 1.0) !important;
+}
+
 .table-footer {
   color: #191919; 
   font-size: 0.95rem;
@@ -334,18 +342,6 @@
   margin-bottom: 0.7rem !important;
   margin-top: 1.75rem;
 }
-
-/* .table-striped > tbody > tr:nth-child(even) > td, .table-striped > tbody > tr:nth-child(even) > th {
-   background-color: #cecece;
-}
-
-.table-striped > tbody > tr:nth-child(even) > td:hover, .table-striped > tbody > tr:nth-child(even) > th:hover {
-   background-color: rgba(201, 201, 201, 0.2);
-}
-
-.table-striped > tbody > tr > td:hover {.        
-  background-color: rgba(201, 201, 201, 0.2);
-} */
 
 .table-title {
   color: #191919;
