--- a/app/www/data-preview-and-download.css
+++ b/app/www/data-preview-and-download.css
@@ -9,6 +9,10 @@ https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css */
   fill: #989898 !important;
 }
 
+.bslib-sidebar-layout.bslib-mb-spacing.html-fill-item {
+  margin-bottom: 0px !important;
+}
+
 .btn {
   background-color: #FFFFFF; 
   border-color: #001C48; 
@@ -65,8 +69,9 @@ https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css */
 }
 
 .dataTables_info {
-  color: #191919 !important;
-  padding-top: 0.25rem !important;
+  color: #606060 !important;
+  font-size: 0.85rem !important;
+  padding-top: 1.0rem !important;
   text-align: left !important;
 }
 
@@ -295,10 +300,10 @@ https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css */
 }
 
 .table-footer {
-  color: #191919; 
-  font-size: 0.95rem;
+  color: #606060; 
+  font-size: 0.85rem;
   font-style: normal;
-  margin-top: 0.25rem;
+  margin-top: 1.0rem;
 }
 
 .table-help-text {
@@ -368,7 +373,7 @@ https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css */
   margin-bottom: 48px; 
   margin-left: 0px;
   margin-right: 1.5rem;
-  margin-top: 1.5rem;
+  margin-top: 16px;
 }
 
 #downloadCSV:active {
@@ -387,7 +392,7 @@ https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css */
   color: #001C48; 
   margin-bottom: 48px; 
   margin-left: 0px;
-  margin-top: 1.5rem;
+  margin-top: 16px;
 }
 
 #downloadTSV:active {
